css/xal.css
html,
body {
   height: 100%;
   font-family: 'Noto Sans', sans-serif;
   /* The html and body elements cannot have any padding or margin */
}

body{
    padding-top: 60px;
}

IMG.displayed {
  display: block;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  padding: 40px 15px;
  max-width: 30%; 
}


IMG.small-display {
  display: inline;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  padding: 40px 15px;
  max-width: 20%;
}

/* Overlay to grey out inactive flags */
#overlay-flag {
   display: inline;
}

#overlay-flag img {
   padding: 1px;
   border: 2px solid #666;
   margin 1px;
}

/* Wrapper for page content to push down footer */
#wrap {
   min-height: 100%;
   height: auto !important;
   height: 100%;
   /* Negaitve indent footer by its height */
   margin: 0 auto -60px;
   /* pad bottom by footer height */
   padding: 0 0 60px;
}

/* Set the fixed height of the footer */
#footer {
   height: 60px;
   color: #ccccff;
   background-color: #000000;
}

/* Responsive fixes as necessary */
@media (max-width: 767px) {
   #footer {
      margin-left: -20px;
      margin-right: -20px;
      padding-left: 20px;
      padding-right: 20px;
   }

   IMG.displayed {
       max-width: 100%;
   }

}

.container {
   width: auto;
   max-width: 1024px;
   padding: 0 15px;
}

.container .credit {
   margin: 20px 0;
}

.inlinedisplay {
   display: inline;
}

.italictext {
   font-style: italic;
}

.pull-right {
   margin-top: 10px;
   margin-right: 10px;
}

.carousel {
    margin-bottom: 60px;
}

